--- a/package.json
+++ b/package.json
@@ -14,14 +14,23 @@
     "build:next": "next build",
     "build": "npm run build:next && npm run build:server",
     "start": "cross-env NODE_ENV=production node dist/index.js",
-    "prod": "concurrently --restart-tries=10 \"npm run start\""
+    "prod": "concurrently --restart-tries=10 \"npm run start\"",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "devDependencies": {
+    "@babel/core": "^7.12.10",
+    "@storybook/addon-actions": "^6.1.11",
+    "@storybook/addon-controls": "^6.1.11",
+    "@storybook/addon-essentials": "^6.1.11",
+    "@storybook/addon-links": "^6.1.11",
+    "@storybook/react": "^6.1.11",
     "@types/express": "^4.17.9",
     "@types/next": "^9.0.0",
     "@types/node": "^14.14.12",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "babel-loader": "^8.2.2",
     "concurrently": "^5.3.0",
     "cross-env": "^7.0.3",
     "dotenv": "^8.2.0",
