добавил themes + final form

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "scripts": {
     "dev:server": "cross-env NODE_SERV=only_server nodemon --exec ts-node --project tsconfig.server.json server/index.ts",
-    "dev:next": "cross-env NODE_SERV=only_server next dev -p 3000",
+    "dev:next": "cross-env NODE_SERV=only_server next dev -p 3100",
     "dev:full": "nodemon --exec ts-node --project tsconfig.server.json server/index.ts",
     "dev": "concurrently \"npm run dev:server\" \"npm run dev:next\" ",
     "build:server": "tsc --project tsconfig.server.json",
@@ -44,12 +44,16 @@
   "dependencies": {
     "@mdx-js/loader": "^1.6.16",
     "@next/mdx": "^10.0.1",
+    "@types/theme-ui": "^0.3.7",
+    "classnames": "^2.2.6",
     "date-fns": "^2.16.1",
     "express": "^4.17.1",
+    "final-form": "^4.20.1",
     "gray-matter": "^4.0.2",
     "next": "^10.0.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-final-form": "^6.5.2",
     "remark": "^13.0.0",
     "remark-html": "^13.0.1",
     "theme-ui": "^0.4.0-rc.0",
