добавил авторизация (системно) + прокинул старые хендлеры

--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
   "author": "3AK <zakon47@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev:server": "cross-env NODE_SERV=only_server nodemon --exec ts-node --project tsconfig.server.json server/index.ts",
-    "dev:next": "cross-env NODE_SERV=only_server next dev -p 3100",
+    "dev:server": "cross-env NODE_SERV=two_server nodemon --exec ts-node --project tsconfig.server.json server/index.ts",
+    "dev:next": "cross-env NODE_SERV=two_server next dev -p 3100",
     "dev:full": "nodemon --exec ts-node --project tsconfig.server.json server/index.ts",
     "dev": "concurrently \"npm run dev:server\" \"npm run dev:next\" ",
     "build:server": "tsc --project tsconfig.server.json",
     "build:next": "next build",
     "build": "npm run build:next && npm run build:server",
-    "start": "cross-env NODE_ENV=production node dist/index.js",
+    "start": "cross-env NODE_ENV=production HOST1=http://localhost:3300 node dist/index.js",
     "prod": "concurrently --restart-tries=100 \"npm run start\"",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
@@ -25,7 +25,9 @@
     "@storybook/addon-essentials": "^6.1.11",
     "@storybook/addon-links": "^6.1.11",
     "@storybook/react": "^6.1.11",
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.9",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/next": "^9.0.0",
     "@types/node": "^14.14.12",
     "@types/react": "^17.0.0",
@@ -35,6 +37,7 @@
     "cross-env": "^7.0.3",
     "dotenv": "^8.2.0",
     "file-loader": "^6.2.0",
+    "http-errors": "^1.8.0",
     "nodemon": "^2.0.6",
     "sass": "^1.32.0",
     "ts-node-dev": "^1.1.1",
@@ -45,17 +48,20 @@
     "@mdx-js/loader": "^1.6.16",
     "@next/mdx": "^10.0.1",
     "@types/theme-ui": "^0.3.7",
+    "bcryptjs": "^2.4.3",
     "classnames": "^2.2.6",
     "date-fns": "^2.16.1",
     "express": "^4.17.1",
     "final-form": "^4.20.1",
     "gray-matter": "^4.0.2",
+    "jsonwebtoken": "^8.5.1",
     "next": "^10.0.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-final-form": "^6.5.2",
     "remark": "^13.0.0",
     "remark-html": "^13.0.1",
+    "socket.io": "^3.0.5",
     "theme-ui": "^0.4.0-rc.0",
     "ts-node": "^9.1.1"
   }
