--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.9",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/multer": "^1.4.5",
     "@types/next": "^9.0.0",
     "@types/node": "^14.14.12",
     "@types/react": "^17.0.0",
@@ -54,7 +55,9 @@
     "express": "^4.17.1",
     "final-form": "^4.20.1",
     "gray-matter": "^4.0.2",
+    "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.2",
     "next": "^10.0.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
