--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.9",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/lodash": "^4.14.167",
     "@types/multer": "^1.4.5",
     "@types/next": "^9.0.0",
     "@types/node": "^14.14.12",
@@ -57,6 +58,7 @@
     "gray-matter": "^4.0.2",
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.20",
     "multer": "^1.4.2",
     "next": "^10.0.4",
     "react": "^17.0.1",
