--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "gulp": "^4.0.2",
     "gulp-cheerio": "^1.0.0",
     "gulp-clean": "^0.4.0",
+    "gulp-csso": "^4.0.1",
+    "gulp-imagemin": "^7.1.0",
     "gulp-rename": "^2.0.0",
     "gulp-replace": "^1.0.0",
     "gulp-svg-sprite": "^1.5.0",
@@ -58,7 +60,8 @@
     "sass": "^1.32.0",
     "ts-node-dev": "^1.1.1",
     "typescript": "^4.1.3",
-    "url-loader": "^4.1.1"
+    "url-loader": "^4.1.1",
+    "vinyl-buffer": "^1.0.1"
   },
   "dependencies": {
     "@mdx-js/loader": "^1.6.16",
